--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.3.9",
+    "@nestjs/websockets": "^10.3.9",
     "@prisma/client": "^5.7.1",
     "argon2": "^0.31.2",
     "class-transformer": "^0.5.1",
